# henry-aem2

./: .env.example  .gitignore  README.md  pyproject.toml
data/: faq_document.txt
outputs/: sample_queries.json  sample_queries_benchmark.json  sample_queries_evaluation.json
src/: build_index.py  embedding_provider.py  evaluator.py  inspect_index.py  query.py  rag.py  utils.py
tests/: test_core.py
